Fix for 1px gap

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -63,10 +63,10 @@
   transition: --c1 1s, --c2 4s;
   //background: radial-gradient(var(--c1), var(--c2));
   #cover {
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: 0px;
+    width: calc(100% + 1px);
+    height: calc(100% + 1px);
+    left: -1px;
+    top: -1px;
     position: fixed;
     opacity: 80%;
     background-color: var(--b3);
